critical self analysis

--- a/Bosco.sty
+++ b/Bosco.sty
@@ -6,6 +6,12 @@
 \usepackage{xcolor}
 \usepackage{tcolorbox}
 
+% Acronyms
+%
+% \usepackage{acronym}
+% \input{acronyms.tex}
+% \renewcommand*{\acsfont}[1]{\textsc{#1}}
+
 % Page setup
 %
 
@@ -37,10 +43,7 @@
 
 \usepackage{microtype}
 \usepackage{fvextra}
-
-
 \let\cleardoublepage\clearpage
-
 
 \graphicspath{{diagrams/}}
 
